# reo-cam-archiver

./: .gitignore  AGENTS.md  CHECKPOINT.md  DESIGN.md  LICENSE  Makefile  archive-task.sh  archive.py  archiver.py  cleanup-task.sh  conftest.py  main.py  pyproject.toml  reo-archiver.sh  test_archiver.py  test_e2e.py  test_integrations.py  test_units.py
container/: 99archival  Containerfile  archive-task.sh  build.sh  cleanup-task.sh  compose.env  docker-compose.yml  entrypoint.sh
src/: entry.py
src/archiver/: __init__.py  config.py  discovery.py  file_manager.py  graceful_exit.py  logger.py  processor.py  progress.py  transcoder.py  utils.py
tests/: conftest.py  test_archive_task.py  test_cleanup.py  test_config.py  test_discovery.py  test_e2e.py  test_entry.py  test_file_manager.py  test_graceful_exit.py  test_integrations.py  test_logger.py  test_processor.py  test_processor_coverage.py  test_progress.py  test_transcoder.py  test_units.py  test_utils.py
