[project]
name = "camera-archiver"
version = "1.0.0"
description = "Camera video archiver for Reolink"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest>=8.4.2", "pytest-mock>=3.15.1", "slipcover>=1.0.17"]

[tool.pytest.ini_options]
markers = [
    "parsing: timestamp parsing tests",
    "structure: directory structure tests",
    "file_operations: file operation tests",
    "transcoding: video transcoding tests",
    "integration: integration tests",
    "e2e: end-to-end tests"
]
